--- a/css/stile.css
+++ b/css/stile.css
@@ -163,14 +163,17 @@ body {
     border-radius: 25px;
     background-color: transparent;
     color: var(--main-btn-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-btn:hover,
+.header-btn:focus {
+    transform: scale(1.05);
+    background-color: var(--accent-color);
 }
 
 /*------------------- HERO----------------- */
 
 .hero {
-    
-
-    background-color: #797c8a;
 }
 .hero-container {
     display: flex;
@@ -213,6 +216,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: #797c8a;
 
 }
 .hero-link {
@@ -329,8 +333,14 @@ body {
     background-color: transparent;
         
     color: var(--second-btn-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.about-btn:hover,
+.about-btn:focus {
+    transform: scale(1.2);
+    color: var(--main-btn-color);
+    background-color: var(--accent-color);
+}
 /*------------------- PRICES----------------- */
 
 .prices {
@@ -423,21 +433,68 @@ body {
     border-radius: 25px;
     background-color: transparent;
     color: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.prices-btn:hover,
+.prices-btn:focus {
+    transform: scale(1.5);
+    background-color: var(--accent-color);
 }
 
 /*------------------- BENEFITS----------------- */
 
-.benefits {}
+.benefits {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    
+}
+.benefits-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 130px;
+    padding-left: 70px;
+    padding-right: 100px;
+}
 
-.benefits-list {}
+.benefits-list {
+    display: flex;
+    width: 370px;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+}
+.benefits-item {
+    width: 170px;
+    height: 133px;
+    padding: 20px 24px;
+    background-color: #F7F7F7;;
+}
 
 .benefits-item>span {
+    display: block;
+    margin-bottom: 6px;
+ 
     font-weight: 700;
     font-size: 42px;
     line-height: calc(57 / 42);
     text-align: center;
+    
     letter-spacing: 0.05em;
     color: #303030;
+}
+.benefits-item>span::after {
+    content: "+";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.38;
+    text-align: center;
+    vertical-align: top;
+    color: var(--accent-color);
+}
+.benefits-item:nth-child(odd) {
+    margin-right: 30px;
+}
+.benefits-item:nth-child(even) {
+    margin-top: 30px;
 }
 
 .benefits-item-text {
@@ -449,14 +506,27 @@ body {
 }
 
 .benefits-pre-title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
     color: #303030;
 }
-
+.benefits-pre-title::before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 1px;
+    background-color: var(--second-title-color);
+}
 .benefits-title {
+    margin-bottom: 20px;
+    width: 430px;
     color: var(--second-title-color);
 }
 
 .benefits-after-title {
+    width: 500px;
     font-size: 18px;
     line-height: 1.67;
     letter-spacing: 0.02em;
@@ -473,9 +543,25 @@ body {
 
 #barbers {}
 
+.barbers-containe {
+    width: 206px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
 .barbers-pre-title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
     margin-bottom: 20px;
     color: #303030;
+}
+
+.barbers-pre-title::before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 1px;
+    background-color: var(--second-title-color);
 }
 
 .barbers-title {
@@ -489,9 +575,31 @@ body {
     justify-content: space-between;
 }
 
+
+.soc-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.soc-link {
+    width: 44px;
+    height: 44px;
+    display: inline-block;
+    padding: 12px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.soc-link>.soc-svg:hover,
+.soc-link>.soc-svg:focus {
+    fill: var(--accent-color);
+}
+
+
 .barbers-item {}
 
 .barbers-item-title {
+    margin-bottom: 8px;
     font-weight: 400;
     font-size: 18px;
     line-height: calc(25 / 18);
@@ -501,6 +609,7 @@ body {
 }
 
 .barbers-item-text {
+    margin-bottom: 30px;
     font-size: 14px;
     line-height: calc(19 / 14);
     text-align: center;
@@ -508,6 +617,33 @@ body {
     color: var(--accent-color);
 }
 
+/* ______gallery_______ */
+.gallery {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.gallery-pre-title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 44px;
+}
+.gallery-pre-title::before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 1px;
+    background-color: var(--second-title-color);
+}
+
 .gallery-pre-title.pre-title {}
 
 .gallery .pre-title {}
+
+.gallery-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+/*_________ footer__________ */
